# torchbox.com

./: .eslintrc.js  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  .stylelintignore  .stylelintrc.js  CHANGELOG.md  Dockerfile  LICENSE.txt  README.md  carbon.txt  docker-compose.yml  fabfile.py  gunicorn-conf.py  jest.config.js  manage.py  mkdocs.yml  notes.md  pa11y.config.js  package-lock.json  package.json  pyproject.toml  ruff.toml  svgo.config.js  tailwind.config.js  tsconfig.json  webpack.config.js
.github/: pull_request_template.md
.github/workflows/: flightpath.yml  flightpath_status_check.yml  gh-pages.yml  test.yml
cloudflare/: workers.js
docker/: bashrc.sh
docs/: accessibility-testing.md  anonymised-data.md  continuous-integration.md  data-import.md  deployment.md  external-docs.md  general-principles.md  hotjar-tracking.md  index.md  infrastructure.md  navigation.md  page-models.md  project-conventions.md  support-runbook.md  upgrading.md
docs/custom-features/: contact.md  divisions.md  migration-friendly-streamfields.md  modes.md  theme.md
docs/front-end/: breakpoints.md  design-guide.md  facebook-app-id.md  fonts.md  grid.md  impact-report.md  incident-form.md  lite-youtube.md  markdown-codehilite.md  motif-headings.md  placeholder-images.md  responsive-images.md  streamfield-blocks.md  sustainability.md  themes_and_modes.md  tooling.md  utility-classes.md
public/: carbon.txt
tbx/: urls.py
tbx/blog/: factories.py  feeds.py  models.py
tbx/blog/migrations/: 0001_initial.py  0002_initial.py  0002_remove_blogindexpage_call_to_action_and_more.py  0002_remove_blogindexpage_call_to_action_and_more.py 12-04-26-234.py  0003_add_new_image_block_to_body_streamfield.py  0003_alter_blogpage_body.py  0004_alter_blogpage_body.py  0004_data_migration_aligned_and_wide_images.py  0005_alter_blogpage_body.py  0005_remove_aligned_and_wide_image_blocks_from_body_streamfield.py  0006_alter_blogpage_body.py  0006_merge_20240117_1143.py  0006_merge_20240117_1530.py  0007_alter_blogpage_body.py  0008_alter_blogpage_body.py  0009_add_help_text_to_alt_text_field_in_image_block.py  0009_alter_blogpage_body.py  0009_delete_blogpagerelatedlink.py  0010_add_help_text_to_alt_text_field_in_image_block.py  0011_remove_blogpagetagselect_page_and_more.py  0012_alter_blogpage_body.py  0012_alter_blogpageauthor_page.py  0013_alter_blogpage_body.py  0013_data_migration_page_authors.py  0014_delete_blogpageauthor.py  0015_merge_20240126_0816.py  0016_alter_blogpage_body.py  0017_blogindexpage_theme_blogpage_theme.py  0018_add_contact_mixin_to_all_page_models.py  0018_blogpage_related_sectors.py  0019_add_contact_mixin_to_all_page_models.py  0020_alter_blogpage_related_sectors.py  0021_alter_blogpage_body.py  0022_add_wide_image_block.py  0023_add_wide_image_block.py  0024_use_custom_streamfield.py  0025_add_navigation_title_override.py  0026_add_earth_colour_theme.py  0027_update_theme_colour_choices.py  0028_divisionmixin_and_navigationsetmixin.py  (+4 more)
tbx/blog/templatetags/: blog_tags.py
tbx/blog/tests/: test_models.py
tbx/chat/: apps.py  indexes.py  models.py  urls.py  views.py
tbx/chat/migrations/: 0001_initial.py
tbx/core/: blocks.py  context_processors.py  errors.py  factories.py  fields.py  forms.py  models.py  urls.py  views.py  wagtail_hooks.py
tbx/core/migrations/: 0001_initial.py  0002_remove_jobindexpagejob_page_delete_jobindexpage_and_more.py  0003_remove_advert_page_remove_advertplacement_advert_and_more.py  0003_remove_standardpage_additional_content_and_more.py  0004_alter_standardpage_body.py  0004_alter_standardpage_body.py 11-59-49-041.py  0005_alter_standardpage_body.py  0005_remove_advert_page_remove_advertplacement_advert_and_more.py  0005_remove_advert_page_remove_advertplacement_advert_and_more.py 12-03-56-072.py  0006_add_new_image_block_to_body_streamfield.py  0006_alter_standardpage_body.py  0007_alter_standardpage_body.py  0007_data_migration_aligned_and_wide_images.py  0008_remove_aligned_and_wide_image_blocks_from_body_streamfield.py  0009_alter_standardpage_body.py  0009_merge_20240117_1143.py  0009_merge_20240117_1530.py  0010_alter_standardpage_body.py  0015_servicepage.py  (+47 more)
tbx/divisions/: blocks.py  factories.py  models.py
tbx/events/: blocks.py  models.py
tbx/images/: factories.py  models.py
tbx/impact_reports/: blocks.py  models.py
tbx/locales/: README.md  formats.py
tbx/navigation/: blocks.py  factories.py  models.py
tbx/people/: blocks.py  factories.py  forms.py  models.py
tbx/services/: apps.py  blocks.py  factories.py  models.py
tbx/settings/: base.py  dev.py  local.py.example  production.py  test.py
tbx/sitemap/: apps.py  factories.py  models.py
tbx/taxonomy/: admin.py  factories.py  models.py  wagtail_hooks.py
tbx/users/: apps.py  factories.py
tbx/work/: blocks.py  factories.py  models.py
(+640 files in other folders)
