[tool.poetry]
name = "tbx"
version = "0.1.0"
description = "Torchbox.com"
authors = ["Torchbox Ltd"]

[tool.poetry.dependencies]
python = "^3.13"
Django = "~5.2.0"
wagtail = "~7.2"
psycopg = "^3.2.9"
gunicorn = "^23.0.0"
whitenoise = "^6.9.0"
phonenumbers = "^9.0.6"
Wand = "^0.6.10"
urllib3 = "2.5.0"

# Django packages
django-basic-auth-ip-whitelist = "^0.8"
django-birdbath = "^2.0.0"
django-csp = "^4.0"
django-pattern-library = "^1.3.0"
django-permissions-policy = "^4.26.0"
django-phonenumber-field = "^8.1.0"
django-redis = "^5.4.0"
django-storages = {version = "^1.14.6", extras = ["boto3"]}
dj-database-url = "^3.0.0"

# Wagtail packages
wagtail-accessibility = "^2.0.0"
wagtail-lite-youtube-embed = "^0.3.0"
wagtail-markdown = "^0.12.1"
wagtailmedia = "^0.17.0"
wagtail-purge = "^0.4.0"

# Production
scout-apm = "^3.4.0"
sentry-sdk = "^2.29.1"
html5lib = "^1.1"
beautifulsoup4 = "^4.13.4"
django-xff = "^1.5.0"

[tool.poetry.group.dev.dependencies]
Werkzeug = "^3.1.1"
django-debug-toolbar = "^5.2.0"
django-extensions = "^4.1"
fabric = "^3.2.2"
pudb = "^2025.1"
honcho = "^2.0.0"

# Linters etc.
detect-secrets = "^1.5.0"
djhtml = "^3.0.10" # update pre-commit-config.yaml too
ruff = "^0.14.8"   # update pre-commit-config.yaml too
pre-commit = "^4.2.0"

# Documentation
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.14"
pymdown-extensions = "^10.15"

# Testing
factory-boy = "^3.3.3"
faker = "^37.3.0"
wagtail-factories = "^4.2.1"
tblib = "^3.1.0"


[build-system]
requires = ["poetry>=1,<2"]
build-backend = "poetry.masonry.api"
