[tool.poetry]
name = "tbx"
version = "0.1.0"
description = "Torchbox.com"
authors = ["Torchbox Ltd"]

[tool.poetry.dependencies]
python = "^3.13"
Django = "~5.2.12"
wagtail = "~7.3"
psycopg = "^3.3.3"
gunicorn = "^23.0.0"
whitenoise = "^6.11.0"
phonenumbers = "^9.0.20"
Wand = "^0.6.10"
urllib3 = "~2.6.3"

# Django packages
django-basic-auth-ip-whitelist = "^0.8"
django-birdbath = "^2.0.0"
django-csp = "^4.0"
django-pattern-library = "^1.3.0"
django-permissions-policy = "^4.26.0"
django-phonenumber-field = "^8.1.0"
django-redis = "^6.0.0"
django-storages = {extras = ["boto3"], version = "^1.14.6"}
dj-database-url = "^3.0.1"

# Wagtail packages
wagtail-accessibility = "^2.0.0"
wagtail-lite-youtube-embed = "^0.3.0"
wagtail-markdown = "^0.13.0"
wagtailmedia = "^0.17.0"
wagtail-purge = "^0.4.0"

# Production
scout-apm = "^3.5.0"
sentry-sdk = "^2.54.0"
html5lib = "^1.1"
beautifulsoup4 = "^4.13.4"
django-xff = "^1.5.0"

[tool.poetry.group.dev.dependencies]
Werkzeug = "^3.1.6"
django-debug-toolbar = "^6.2.0"
django-extensions = "^4.1"
fabric = "^3.2.2"
pudb = "^2025.1"
honcho = "^2.0.0"

# Linters etc.
detect-secrets = "^1.5.0"
django-upgrade = "^1.30.0"  # update pre-commit-config.yaml too
djhtml = "^3.0.10"          # update pre-commit-config.yaml too
pyupgrade = "^3.21.2"       # update pre-commit-config.yaml too
pre-commit = "^4.5.1"
ruff = "^0.15.5"            # update pre-commit-config.yaml too

# Documentation
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.0"
pymdown-extensions = "^10.18"

# Testing
factory-boy = "^3.3.3"
faker = "^38.2.0"
wagtail-factories = "^4.3.0"
tblib = "^3.1.0"


[build-system]
requires = ["poetry>=1,<2"]
build-backend = "poetry.masonry.api"
